Instructions for javafx added